--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,8 @@
             <input type="date" id="fecha" name="fecha"required>
             <!-- usamos required para hacer que el campo sea obligatorio y el name lo usamos para decirle al servidor como guardarlo-->
         </label>
-        <br>
+        <br><br>
+        <button type="submit">Registrar cliente</button>
     </form>
 </body>
 </html>
