se va a fucionar las ramas

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/" method="post"><!-- el action se usa para indicar la ruta donde va a ir os datos enese caso se llama /(agrega lo que  quieras)
+    <form action="/registrar" method="post"><!-- el action se usa para indicar la ruta donde va a ir os datos enese caso se llama /(agrega lo que  quieras)
     el method se usa para decirle como lo va a enviar usamos el post para que no se valla via la url como el get y los datos puedan ser vistos-->
         <label for="nombre">Nombre <!--  lo nombramos en el for para que los datos se vinculen mediante el id con el input -->
             <input type="text" id="nombre" name="nombre" placeholder="Ingrese el nombre del usuario" required>
@@ -46,5 +46,6 @@
         <br><br>
         <button type="submit">Registrar cliente</button>
     </form>
+    
 </body>
 </html>
